# Clipper

./: Clipper help (Delphi).chm  README  README.md  change_log.txt  clipper ver4.txt  clipper.chm  clipper.cpp  clipper.cs  clipper.hpp  clipper.pas
Beziers/: Beziers.cs  Beziers.pas  beziers.cpp  beziers.hpp
Beziers/C#_LinesDemo/: Form1.Designer.cs  Form1.cs  Form1.resx  LinesDemo.csproj  LinesDemo.sln  Program.cs
C#/: clipper.cs  clipper_misc.cs
C#/ConsoleDemo/: ConsoleDemo.sln
C#/GuiDemo/: GuiDemo.sln
C#/clipper_library/: clipper.cs  clipper_library.csproj
C#/demo1/: Form1.Designer.cs  Form1.cs
Delphi/: clipper.pas  clipper_misc.pas  main.dfm  main.pas
Documentation/: clipper.chm
ObjectiveC/: objectivec_readme.txt
agg/: agg_conv_clipper.h  agg_conv_clipper.pas  clipper_test.cpp  clipper_test.dpr
aggpas/: agg_conv_clipper.pas  clipper_test.dpr
cpp/: CMakeLists.txt  clipper.cpp  clipper.hpp  clipper_misc.cpp  clipper_misc.hpp  cpp_code_sample.txt
cpp/clipperCLR/: Form1.h
cpp/cpp_agg/: agg_conv_clipper.h  clipper_test.sln  clipper_test.vcxproj  clipper_test.vcxproj.filters
cpp/cpp_cairo/: cairo_clipper.cbproj  cairo_clipper.cpp  main.cpp
cpp/cpp_console/: File1.cpp  clipper_console_demo.cpp  clipper_console_demo.sln  clipper_console_demo.vcxproj
cpp/cpp_opengl/: clipper_demo.vcxproj  main.cpp  menu.res
demo/: Clipper.pas  GR32_Misc.pas  main.dfm  main.pas
dll/: sample_cpp_code.txt  sample_cpp_code_for_using_dll.txt  sample_cppbuilder_code.txt  sample_visualcpp_code.txt
python/: clipper.py  clipper_demo.py  python_readme.txt
(+42 files in other folders)
